# CW_Parallel_Computing_Petryk

./: .gitignore  CMakeLists.txt  README.md
client/include/: Client.h
client/src/: Client.cpp  main.cpp
docs/: ПО_Курсова_робота_Петрик_ДА-21.docx
load-test/: tcp_locustfile.py  web_locustfile.py
server/data/D1.7GB/: 1004.txt  1008.txt  1082.txt  1100.txt  1106.txt  1114.txt  1119.txt  1124.txt  1131.txt  1136.txt  1324.txt  1331.txt  1340.txt  1359.txt  1398.txt  1451.txt  1466.txt  1479.txt  1483.txt  1485.txt  1489.txt  1490.txt  1494.txt  1500.txt  1504.txt  1506.txt  1509.txt  1511.txt  1522.txt  1533.txt  1543.txt  1544.txt  1576.txt  1633.txt  1694.txt  1722.txt  1772.txt  1774.txt  1781.txt  1783.txt  (+891 more)
server/data/D1GB/: 1107.txt  1108.txt  1111.txt  1115.txt  1116.txt  1117.txt  1120.txt  1122.txt  1123.txt  1125.txt  1126.txt  1133.txt  1135.txt  1137.txt  1201.txt  1224.txt  1226.txt  1229.txt  1233.txt  1234.txt  1249.txt  1286.txt  1319.txt  1328.txt  1370.txt  1408.txt  1412.txt  1501.txt  1502.txt  1503.txt  1512.txt  1515.txt  1516.txt  1518.txt  1521.txt  1526.txt  1545.txt  1546.txt  1558.txt  1575.txt  (+23 more)
server/data/D670MB/: 1003.txt  1025.txt  1084.txt  1104.txt  1105.txt  1109.txt  1110.txt  1113.txt  1127.txt  1130.txt  (+41 more)
server/include/: FileManager.h  InvertedIndex.h  Queue.h  SearchResult.h  Server.h  Task.h  ThreadPool.h
server/src/: FileManager.cpp  InvertedIndex.cpp  Queue.cpp  SearchResult.cpp  Server.cpp  Task.cpp  ThreadPool.cpp  main.cpp
web-client/: index.html  index.js  package-lock.json  package.json  proxy-server.js  style.css
